DZ6/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvm-dz6-users-deployment
  labels:
    app: dz6-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dz6-users
  template:
    metadata:
      labels:
        app: dz6-users
    spec:
      containers:
        - name: dz6-users
          image: rvm1111/arch:dz6-users-v2
          ports:
            - name: web
              containerPort: 8081
          livenessProbe:
            httpGet:
              port: 8081
              path: /health
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8081
              path: /health
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvm-dz6-billing-deployment
  labels:
    app: dz6-billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dz6-billing
  template:
    metadata:
      labels:
        app: dz6-billing
    spec:
      containers:
        - name: dz6-billing
          image: rvm1111/arch:dz6-billing-v1
          ports:
            - name: web
              containerPort: 8082
          livenessProbe:
            httpGet:
              port: 8082
              path: /health
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8082
              path: /health
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvm-dz6-orders-deployment
  labels:
    app: dz6-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dz6-orders
  template:
    metadata:
      labels:
        app: dz6-orders
    spec:
      containers:
        - name: dz6-orders
          image: rvm1111/arch:dz6-orders-v1
          ports:
            - name: web
              containerPort: 8083
          livenessProbe:
            httpGet:
              port: 8083
              path: /health
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8083
              path: /health
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvm-dz6-notifications-deployment
  labels:
    app: dz6-notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dz6-notifications
  template:
    metadata:
      labels:
        app: dz6-notifications
    spec:
      containers:
        - name: dz6-notifications
          image: rvm1111/arch:dz6-notifications-v1
          ports:
            - name: web
              containerPort: 8084
          livenessProbe:
            httpGet:
              port: 8084
              path: /notifications
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8084
              path: /notifications
            initialDelaySeconds: 20
            periodSeconds: 5
