DZ6/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz2-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/romanov($|/)(register)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz6-users-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(account)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz6-billing-service
                port:
                  number: 8080
          - path: /otusapp/romanov($|/)(deposit)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz6-billing-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(order)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz6-orders-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(notification)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz6-notifications-service
                port:
                  number: 8080
